WIP: More AddFileView

--- a/src/main/java/ca/axoplasm/Octoscribe/view/AddFileView.form
+++ b/src/main/java/ca/axoplasm/Octoscribe/view/AddFileView.form
@@ -48,6 +48,8 @@
         <rowspec value="center:max(d;4px):noGrow"/>
         <rowspec value="top:4dlu:noGrow"/>
         <rowspec value="center:max(d;4px):noGrow"/>
+        <rowspec value="top:4dlu:noGrow"/>
+        <rowspec value="center:max(d;4px):noGrow"/>
         <colspec value="fill:d:noGrow"/>
         <colspec value="left:4dlu:noGrow"/>
         <colspec value="fill:d:grow"/>
@@ -150,6 +152,22 @@
             <properties>
               <text value=""/>
             </properties>
+          </component>
+          <component id="78eb8" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="16" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <forms/>
+            </constraints>
+            <properties>
+              <text value="Create PDF?"/>
+            </properties>
+          </component>
+          <component id="fc226" class="javax.swing.JCheckBox" binding="createPDFCheckbox">
+            <constraints>
+              <grid row="16" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <forms/>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
