--- a/src/main/java/ca/axoplasm/Octoscribe/view/SettingsView.form
+++ b/src/main/java/ca/axoplasm/Octoscribe/view/SettingsView.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ca.axoplasm.Octoscribe.view.SettingsView">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="FormLayout">
+  <grid id="27dc6" binding="contentPane" layout-manager="FormLayout">
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:4dlu:noGrow"/>
     <rowspec value="center:d:noGrow"/>
@@ -12,7 +12,7 @@
     <colspec value="left:4dlu:noGrow"/>
     <colspec value="fill:d:grow"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="155"/>
+      <xy x="20" y="20" width="500" height="167"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -44,7 +44,7 @@
           <text value="Whisper API Endpoint"/>
         </properties>
       </component>
-      <component id="a7677" class="javax.swing.JTextField" binding="WhisperAPIField">
+      <component id="a7677" class="javax.swing.JTextField" binding="whisperAPIField">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -75,7 +75,7 @@
           </component>
         </children>
       </grid>
-      <component id="482b4" class="javax.swing.JPasswordField" binding="WhisperAPIKeyField">
+      <component id="482b4" class="javax.swing.JPasswordField" binding="whisperAPIKeyField">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -84,7 +84,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="82109" class="javax.swing.JPasswordField" binding="DeepLAPIKeyField">
+      <component id="82109" class="javax.swing.JPasswordField" binding="deeplAPIKeyField">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
